syntax = "proto3";

package ai.pipestream.tourney.stream.v1;

option java_package = "ai.pipestream.tourney.stream.v1";
option java_multiple_files = true;
option go_package = "github.com/ai-pipestream/paper-rock-scissors/clients/go/pb/ai/pipestream/tourney/stream/v1;streamv1";

// The "Clean" Service: Stateful and In-Memory
service StreamingArenaService {
  // BiDi Streaming: The connection IS the match state.
  // The Judge sends a "Pulse" (trigger), the Client sends a "Move".
  rpc Battle (stream BattleRequest) returns (stream BattleResponse);
}

// One message type to rule them all (Polymorphism via Oneof)
message BattleRequest {
  oneof payload {
    Handshake handshake = 1;
    Move move = 2;
  }
}

message Handshake {
  string language_name = 1;
  string prng_algorithm = 2;
}

message Move {
  int32 move = 1; // 0=Rock, 1=Paper, 2=Scissors
}

// Server responses
message BattleResponse {
  oneof payload {
    string status = 1;       // "CONNECTED", "OPPONENT_FOUND"
    RequestMove trigger = 2; // The "Pulse" asking for a move
    RoundResult result = 3;  // Immediate feedback
  }
}

message RequestMove {
  int32 round_id = 1;
}

message RoundResult {
  int32 round_id = 1;
  int32 opponent_move = 2;
  string outcome = 3;      // "WIN", "LOSS", "TIE"
}
